# CoreMarkForRISCV_RV64_onQemu

./: Makefile  README.md
CoreMarkForRISCV64/: Makefile  core_portme.c  core_portme.h  coremark.map  coremark.out
FreeRTOS_RISCV_RV64G/Demo/RISC-V-Qemu-virt_GCC/: FreeRTOSConfig.h  Makefile  RTOSDemo.map  core_main.c  core_portme.c  core_portme.h  coremark.dump  coremark.out  fake_rom.lds  main.c  main_blinky.c  start.sh
FreeRTOS_RISCV_RV64G/Source/portable/: CMakeLists.txt
FreeRTOS_RISCV_RV64G/Source/portable/GCC/RISC-V/chip_specific_extensions/RISCV_no_extensions/: freertos_risc_v_chip_specific_extensions.h
